fix(calendar): fix broken styles

--- a/packages/components/src/Calendar/Calendar.module.scss
+++ b/packages/components/src/Calendar/Calendar.module.scss
@@ -170,18 +170,8 @@ $rdp-cell-size: 40px;
   font-weight: bold;
 }
 
-.daySelected {
-  background-color: $color-blue-500;
-  color: $color-white;
-
-  &:hover,
-  &:focus-visible {
-    background-color: $color-blue-400;
-    color: $color-white;
-  }
-}
-
-.dayDisabled {
+// Increased specificity to override selected days
+.day.dayDisabled {
   // Focus ring styles have been removed as react-day-picker has been updated such that
   // disabled days do not receive focus, and keyboard navigation only lands on available days.
   // https://github.com/gpbl/react-day-picker/pull/1519
@@ -189,13 +179,6 @@ $rdp-cell-size: 40px;
   background: none;
   pointer-events: none;
   color: rgba($color-purple-800-rgb, 0.3);
-  opacity: 100%;
-
-  &:focus-visible {
-    color: rgba($color-purple-800-rgb, 0.3);
-    background-color: transparent;
-    opacity: 100%;
-  }
 }
 
 // We can't use <VisuallyHidden />, so copied the styles here.
